fixed spacing for section headings on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -268,6 +268,12 @@ section h2 {
     font-size: 6vw;
   }
 
+  #my-projects h2,
+  #my-skills h2,
+  #contact-me h2 {
+    padding-top: 80px;
+  }
+
   .navbar {
     display: flex;
   }
